--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
